feat(ai): add canonical Agent search indexing
Assisted-by: Claude Code